[package]
name = "nanwei_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libc = "0.2"
quiche = { version = "0.14.0", features = ["ffi", "dtp"], path = "./gmdtp/quiche" }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]