[package]
name = "nanwei_api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libc = "0.2"
quiche = { version = "0.14.0", features = ["ffi", "dtp"], path = "./gmdtp/quiche" }
lazy_static = "1.4.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
tokio = { version = "1.27.0", features = ["full"] }
env_logger = "0.10"
anyhow = "1.0"
ring = "0.16"
log = { version = "0.4", features = ["std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
url = "2"
futures = "0.3"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]